Added middle pile functionality